remove now playing integration and scrobble
